--- a/style.css
+++ b/style.css
@@ -3,3 +3,45 @@ body{
 font-family: 'Roboto', sans-serif;
 font-family: 'Ubuntu', sans-serif
 }
+h2{
+    padding-left: 20px;
+}
+h1{
+    font-size: 40PX;
+}
+.start{
+    display: flex;
+    justify-content: space-between;
+}
+.start-taxt {
+    padding-right: 400px;
+    padding: 20px;
+}
+.button{
+   background: #E02C6D;
+   padding: 10px;
+   position: relative;
+   top: 30px;
+   border-radius: 40px;
+   color: white;
+   text-decoration: none;
+    
+}
+.fas {
+    margin-left: 10px;
+    margin-top: 10px;
+    text-align: center;
+    
+}
+
+
+.img-1{
+    float: right;
+    width: 30%;
+}
+.main{
+    position: relative;
+    top: -450px;
+
+}
+/* frist section */
